--- a/AdventureGame_Home.html
+++ b/AdventureGame_Home.html
@@ -1,6 +1,14 @@
-<html>
+<!DOCTYPE html>
 
-<body>
+<html>
+<head>
+    <link href = "AdventureGame.css" rel = "stylesheet">
+    <link href = "animate.css" rel="stylesheet">
+    </head>
     
+<body><center>
+    <h1 class= "animated bounceInDown">The Quest For Booty</h1>
+    <p1></p1>
+        </center>
     </body>
 </html>
